[gd_scene load_steps=34 format=3 uid="uid://brmjm22cswpvq"]

[ext_resource type="Texture2D" uid="uid://gxf8p5fh685o" path="res://assets/blocks/Brick.png" id="1_d3ye2"]
[ext_resource type="Texture2D" uid="uid://ddyjqt3bc5ay8" path="res://assetsx2/Bgs/cloud.png" id="1_ngmpc"]
[ext_resource type="Script" path="res://scripts/level_2.gd" id="1_pw143"]
[ext_resource type="Texture2D" uid="uid://csomdkv6bbsid" path="res://assetsx2/Bgs/pixil-fentrance.png" id="2_13oq8"]
[ext_resource type="Texture2D" uid="uid://cbq86lmt1ofco" path="res://assets/blocks/GroundBlock.png" id="2_f88d0"]
[ext_resource type="Texture2D" uid="uid://bx4opl83br4a7" path="res://assets/blocks/HardBlock.png" id="3_ejbh1"]
[ext_resource type="Texture2D" uid="uid://dnlcoaexbyyr" path="res://assets/blocks/UndergroundBlock.png" id="4_badf1"]
[ext_resource type="Texture2D" uid="uid://dm7gsuu3pullf" path="res://assets/blocks/UndergroundBrick.png" id="5_1wh1i"]
[ext_resource type="PackedScene" uid="uid://c5dnh0g02i5wh" path="res://scenes/player.tscn" id="6_v1xxf"]
[ext_resource type="Texture2D" uid="uid://b8vjdbmjxpbmj" path="res://assetsx2/Env/OverWorld.png" id="7_66fqm"]
[ext_resource type="PackedScene" uid="uid://cw21d2wt6y7i7" path="res://scenes/goomba.tscn" id="8_vccg2"]
[ext_resource type="PackedScene" uid="uid://6pb2aj4eta0w" path="res://scenes/brick.tscn" id="11_bvlwm"]
[ext_resource type="PackedScene" uid="uid://dr7crf4rx2p5e" path="res://scenes/mystery_box.tscn" id="12_rg4ui"]
[ext_resource type="Script" path="res://scripts/level_manager.gd" id="13_635rp"]
[ext_resource type="PackedScene" uid="uid://82p422hvx61p" path="res://scenes/Piranha.tscn" id="14_1esg6"]
[ext_resource type="PackedScene" uid="uid://bmpxo04x5rgc" path="res://scenes/MovingFireball.tscn" id="15_gu5sv"]
[ext_resource type="PackedScene" uid="uid://kahb14nseb2d" path="res://resource/sounds.tscn" id="18_kco4t"]
[ext_resource type="PackedScene" uid="uid://mytjwgnuc4r4" path="res://scenes/hud.tscn" id="23_br0x3"]

[sub_resource type="Animation" id="Animation_0ia7a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Piranha:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(636.5, -10.2445)]
}

[sub_resource type="Animation" id="Animation_l0tyl"]
resource_name = "piranha"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Piranha:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(636.5, 14.7302), Vector2(636.5, 14.7302), Vector2(636.5, 14.7302), Vector2(636.5, -2.38731), Vector2(636.5, -9.96392), Vector2(636.5, -9.96392), Vector2(636.5, -9.96392)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e2nyn"]
_data = {
"RESET": SubResource("Animation_0ia7a"),
"piranha": SubResource("Animation_l0tyl")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m5dne"]
texture = ExtResource("1_d3ye2")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7d23i"]
texture = ExtResource("2_f88d0")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b0463"]
texture = ExtResource("3_ejbh1")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bk371"]
texture = ExtResource("4_badf1")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_27gyj"]
texture = ExtResource("5_1wh1i")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_30uxe"]
texture = ExtResource("7_66fqm")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -1, 0.5, -4.5, 4.5, 1, 0.5, 5)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_7vpch"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 5
sources/0 = SubResource("TileSetAtlasSource_m5dne")
sources/1 = SubResource("TileSetAtlasSource_7d23i")
sources/2 = SubResource("TileSetAtlasSource_b0463")
sources/3 = SubResource("TileSetAtlasSource_bk371")
sources/4 = SubResource("TileSetAtlasSource_27gyj")
sources/5 = SubResource("TileSetAtlasSource_30uxe")

[sub_resource type="Animation" id="Animation_6pq07"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(683.789, 93.5731)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MovingFireball2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(768.016, 93.0433)]
}

[sub_resource type="Animation" id="Animation_w2u7q"]
resource_name = "up and down"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(683.789, 93.5731), Vector2(683.789, 40.9521), Vector2(683.789, -11.6689)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MovingFireball2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(768.016, 93.0433), Vector2(768.016, 38.2986), Vector2(768.016, -9.83898)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qdyqf"]
_data = {
"RESET": SubResource("Animation_6pq07"),
"up and down": SubResource("Animation_w2u7q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmbjc"]
size = Vector2(7.54871, 39.2715)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i43xt"]
size = Vector2(8.18005, 99.411)

[node name="level_2" type="Node"]
script = ExtResource("1_pw143")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -396.35
offset_top = -292.28
offset_right = 1711.65
offset_bottom = 936.72
texture = ExtResource("1_ngmpc")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-72, 0)
zoom = Vector2(2.75, 2.75)

[node name="Pixil-fentrance" type="Sprite2D" parent="."]
position = Vector2(1305.36, 8.35695)
scale = Vector2(1.79911, 1.79911)
texture = ExtResource("2_13oq8")

[node name="Piranha" parent="." instance=ExtResource("14_1esg6")]
position = Vector2(636.5, -10.2445)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Piranha"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_e2nyn")
}
autoplay = "piranha"

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(0.971802, 1.00625)
tile_set = SubResource("TileSet_7vpch")
format = 2
layer_0/tile_data = PackedInt32Array(393215, 5, 0, 458751, 5, 0, 524287, 5, 0, 327680, 5, 0, 393216, 5, 0, 458752, 5, 0, 327681, 5, 0, 393217, 5, 0, 458753, 5, 0, 327682, 5, 0, 393218, 5, 0, 458754, 5, 0, 327683, 5, 0, 393219, 5, 0, 458755, 5, 0, 393222, 5, 0, 458758, 5, 0, 393223, 5, 0, 458759, 5, 0, 393224, 5, 0, 458760, 5, 0, 327692, 5, 0, 393228, 5, 0, 458764, 5, 0, 327693, 5, 0, 393229, 5, 0, 458765, 5, 0, 393202, 5, 0, 458738, 5, 0, 524274, 5, 0, 393203, 5, 0, 458739, 5, 0, 524275, 5, 0, 393204, 5, 0, 458740, 5, 0, 524276, 5, 0, 393205, 5, 0, 458741, 5, 0, 524277, 5, 0, 393206, 5, 0, 458742, 5, 0, 524278, 5, 0, 393207, 5, 0, 458743, 5, 0, 524279, 5, 0, 393208, 5, 0, 458744, 5, 0, 524280, 5, 0, 393212, 5, 0, 458748, 5, 0, 524284, 5, 0, 393213, 5, 0, 458749, 5, 0, 524285, 5, 0, 393214, 5, 0, 458750, 5, 0, 524286, 5, 0, 393199, 5, 0, 458735, 5, 0, 524271, 5, 0, 393200, 5, 0, 458736, 5, 0, 524272, 5, 0, 393201, 5, 0, 458737, 5, 0, 524273, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327696, 5, 0, 393232, 5, 0, 458768, 5, 0, 327697, 5, 0, 393233, 5, 0, 458769, 5, 0, 327698, 5, 0, 393234, 5, 0, 458770, 5, 0, 327699, 5, 0, 393235, 5, 0, 458771, 5, 0, 327700, 5, 0, 393236, 5, 0, 458772, 5, 0, 327701, 5, 0, 393237, 5, 0, 458773, 5, 0, 327712, 5, 0, 393248, 5, 0, 458784, 5, 0, 327713, 5, 0, 393249, 5, 0, 458785, 5, 0, 327714, 5, 0, 393250, 5, 0, 458786, 5, 0, 327715, 5, 0, 393251, 5, 0, 458787, 5, 0, 327716, 5, 0, 393252, 5, 0, 458788, 5, 0, 327717, 5, 0, 393253, 5, 0, 458789, 5, 0, 327718, 5, 0, 393254, 5, 0, 458790, 5, 0, 327719, 5, 0, 393255, 5, 0, 458791, 5, 0, 327720, 5, 0, 393256, 5, 0, 458792, 5, 0, 327721, 5, 0, 393257, 5, 0, 458793, 5, 0, 327722, 5, 0, 393258, 5, 0, 458794, 5, 0, 327746, 5, 0, 327747, 5, 0, 393267, 5, 0, 458803, 5, 0, 393268, 5, 0, 458804, 5, 0, 393269, 5, 0, 458805, 5, 0, 393270, 5, 0, 458806, 5, 0, 393271, 5, 0, 458807, 5, 0, 393272, 5, 0, 458808, 5, 0, 393273, 5, 0, 458809, 5, 0, 393274, 5, 0, 458810, 5, 0, 393275, 5, 0, 458811, 5, 0, 393276, 5, 0, 458812, 5, 0, 393277, 5, 0, 458813, 5, 0, 393278, 5, 0, 458814, 5, 0, 393279, 5, 0, 458815, 5, 0, 393280, 5, 0, 458816, 5, 0, 393281, 5, 0, 458817, 5, 0, 393282, 5, 0, 458818, 5, 0, 393283, 5, 0, 458819, 5, 0, 327751, 5, 0, 393287, 5, 0, 458823, 5, 0, 524359, 5, 0, 589895, 5, 0, 655431, 5, 0, 720967, 5, 0, 327752, 5, 0, 393288, 5, 0, 458824, 5, 0, 524360, 5, 0, 589896, 5, 0, 655432, 5, 0, 720968, 5, 0, 327753, 5, 0, 393289, 5, 0, 458825, 5, 0, 524361, 5, 0, 589897, 5, 0, 655433, 5, 0, 720969, 5, 0, 327754, 5, 0, 393290, 5, 0, 458826, 5, 0, 524362, 5, 0, 589898, 5, 0, 655434, 5, 0, 720970, 5, 0, 327755, 5, 0, 393291, 5, 0, 458827, 5, 0, 524363, 5, 0, 589899, 5, 0, 655435, 5, 0, 720971, 5, 0, 327756, 5, 0, 393292, 5, 0, 458828, 5, 0, 524364, 5, 0, 589900, 5, 0, 655436, 5, 0, 720972, 5, 0, 327757, 5, 0, 393293, 5, 0, 458829, 5, 0, 524365, 5, 0, 589901, 5, 0, 655437, 5, 0, 720973, 5, 0, 327758, 5, 0, 393294, 5, 0, 458830, 5, 0, 524366, 5, 0, 589902, 5, 0, 655438, 5, 0, 720974, 5, 0, 327759, 5, 0, 393295, 5, 0, 458831, 5, 0, 524367, 5, 0, 589903, 5, 0, 655439, 5, 0, 720975, 5, 0, 327760, 5, 0, 393296, 5, 0, 458832, 5, 0, 524368, 5, 0, 589904, 5, 0, 655440, 5, 0, 720976, 5, 0, 327761, 5, 0, 393297, 5, 0, 458833, 5, 0, 524369, 5, 0, 589905, 5, 0, 655441, 5, 0, 720977, 5, 0, 327762, 5, 0, 393298, 5, 0, 458834, 5, 0, 524370, 5, 0, 589906, 5, 0, 655442, 5, 0, 720978, 5, 0, 327763, 5, 0, 393299, 5, 0, 458835, 5, 0, 524371, 5, 0, 589907, 5, 0, 655443, 5, 0, 720979, 5, 0, 327764, 5, 0, 393300, 5, 0, 458836, 5, 0, 524372, 5, 0, 589908, 5, 0, 655444, 5, 0, 720980, 5, 0, 327765, 5, 0, 393301, 5, 0, 458837, 5, 0, 524373, 5, 0, 589909, 5, 0, 655445, 5, 0, 720981, 5, 0, 327766, 5, 0, 393302, 5, 0, 458838, 5, 0, 524374, 5, 0, 589910, 5, 0, 655446, 5, 0, 720982, 5, 0, 327767, 5, 0, 393303, 5, 0, 458839, 5, 0, 524375, 5, 0, 589911, 5, 0, 655447, 5, 0, 720983, 5, 0, 327768, 5, 0, 393304, 5, 0, 458840, 5, 0, 524376, 5, 0, 589912, 5, 0, 655448, 5, 0, 720984, 5, 0, 327769, 5, 0, 393305, 5, 0, 458841, 5, 0, 524377, 5, 0, 589913, 5, 0, 655449, 5, 0, 720985, 5, 0, 327770, 5, 0, 393306, 5, 0, 458842, 5, 0, 524378, 5, 0, 589914, 5, 0, 655450, 5, 0, 720986, 5, 0, 589807, 5, 0, 655343, 5, 0, 720879, 5, 0, 786415, 5, 0, 589808, 5, 0, 655344, 5, 0, 720880, 5, 0, 786416, 5, 0, 589809, 5, 0, 655345, 5, 0, 720881, 5, 0, 786417, 5, 0, 589810, 5, 0, 655346, 5, 0, 720882, 5, 0, 786418, 5, 0, 589811, 5, 0, 655347, 5, 0, 720883, 5, 0, 786419, 5, 0, 589812, 5, 0, 655348, 5, 0, 720884, 5, 0, 786420, 5, 0, 589813, 5, 0, 655349, 5, 0, 720885, 5, 0, 786421, 5, 0, 589814, 5, 0, 655350, 5, 0, 720886, 5, 0, 786422, 5, 0, 589815, 5, 0, 655351, 5, 0, 720887, 5, 0, 786423, 5, 0, 589816, 5, 0, 655352, 5, 0, 720888, 5, 0, 786424, 5, 0, 589820, 5, 0, 655356, 5, 0, 720892, 5, 0, 786428, 5, 0, 589821, 5, 0, 655357, 5, 0, 720893, 5, 0, 786429, 5, 0, 589822, 5, 0, 655358, 5, 0, 720894, 5, 0, 786430, 5, 0, 589823, 5, 0, 655359, 5, 0, 720895, 5, 0, 786431, 5, 0, 524288, 5, 0, 589824, 5, 0, 655360, 5, 0, 720896, 5, 0, 524289, 5, 0, 589825, 5, 0, 655361, 5, 0, 720897, 5, 0, 524290, 5, 0, 589826, 5, 0, 655362, 5, 0, 720898, 5, 0, 524291, 5, 0, 589827, 5, 0, 655363, 5, 0, 720899, 5, 0, 524294, 5, 0, 589830, 5, 0, 655366, 5, 0, 720902, 5, 0, 524295, 5, 0, 589831, 5, 0, 655367, 5, 0, 720903, 5, 0, 524296, 5, 0, 589832, 5, 0, 655368, 5, 0, 720904, 5, 0, 524300, 5, 0, 589836, 5, 0, 655372, 5, 0, 720908, 5, 0, 524301, 5, 0, 589837, 5, 0, 655373, 5, 0, 720909, 5, 0, 524304, 5, 0, 589840, 5, 0, 655376, 5, 0, 720912, 5, 0, 524305, 5, 0, 589841, 5, 0, 655377, 5, 0, 720913, 5, 0, 524306, 5, 0, 589842, 5, 0, 655378, 5, 0, 720914, 5, 0, 524307, 5, 0, 589843, 5, 0, 655379, 5, 0, 720915, 5, 0, 524308, 5, 0, 589844, 5, 0, 655380, 5, 0, 720916, 5, 0, 524309, 5, 0, 589845, 5, 0, 655381, 5, 0, 720917, 5, 0, 524320, 5, 0, 589856, 5, 0, 655392, 5, 0, 720928, 5, 0, 524321, 5, 0, 589857, 5, 0, 655393, 5, 0, 720929, 5, 0, 524322, 5, 0, 589858, 5, 0, 655394, 5, 0, 720930, 5, 0, 524323, 5, 0, 589859, 5, 0, 655395, 5, 0, 720931, 5, 0, 524324, 5, 0, 589860, 5, 0, 655396, 5, 0, 720932, 5, 0, 524325, 5, 0, 589861, 5, 0, 655397, 5, 0, 720933, 5, 0, 524326, 5, 0, 589862, 5, 0, 655398, 5, 0, 720934, 5, 0, 524327, 5, 0, 589863, 5, 0, 655399, 5, 0, 720935, 5, 0, 524328, 5, 0, 589864, 5, 0, 655400, 5, 0, 720936, 5, 0, 524329, 5, 0, 589865, 5, 0, 655401, 5, 0, 720937, 5, 0, 524330, 5, 0, 589866, 5, 0, 655402, 5, 0, 720938, 5, 0, 524339, 5, 0, 589875, 5, 0, 655411, 5, 0, 720947, 5, 0, 524340, 5, 0, 589876, 5, 0, 655412, 5, 0, 720948, 5, 0, 524341, 5, 0, 589877, 5, 0, 655413, 5, 0, 720949, 5, 0, 524342, 5, 0, 589878, 5, 0, 655414, 5, 0, 720950, 5, 0, 524343, 5, 0, 589879, 5, 0, 655415, 5, 0, 720951, 5, 0, 524344, 5, 0, 589880, 5, 0, 655416, 5, 0, 720952, 5, 0, 524345, 5, 0, 589881, 5, 0, 655417, 5, 0, 720953, 5, 0, 524346, 5, 0, 589882, 5, 0, 655418, 5, 0, 720954, 5, 0, 524347, 5, 0, 589883, 5, 0, 655419, 5, 0, 720955, 5, 0, 524348, 5, 0, 589884, 5, 0, 655420, 5, 0, 720956, 5, 0, 524349, 5, 0, 589885, 5, 0, 655421, 5, 0, 720957, 5, 0, 524350, 5, 0, 589886, 5, 0, 655422, 5, 0, 720958, 5, 0, 524351, 5, 0, 589887, 5, 0, 655423, 5, 0, 720959, 5, 0, 524352, 5, 0, 589888, 5, 0, 655424, 5, 0, 720960, 5, 0, 524353, 5, 0, 589889, 5, 0, 655425, 5, 0, 720961, 5, 0, 524354, 5, 0, 589890, 5, 0, 655426, 5, 0, 720962, 5, 0, 524355, 5, 0, 589891, 5, 0, 655427, 5, 0, 720963, 5, 0, 327691, 5, 0, 393227, 5, 0, 458763, 5, 0, 524299, 5, 0, 589835, 5, 0, 655371, 5, 0, 720907, 5, 0, 327704, 5, 0, 393240, 5, 0, 458776, 5, 0, 524312, 5, 0, 589848, 5, 0, 655384, 5, 0, 720920, 5, 0, 327705, 5, 0, 393241, 5, 0, 458777, 5, 0, 524313, 5, 0, 589849, 5, 0, 655385, 5, 0, 720921, 5, 0, 327706, 5, 0, 393242, 5, 0, 458778, 5, 0, 524314, 5, 0, 589850, 5, 0, 655386, 5, 0, 720922, 5, 0, 327707, 5, 0, 393243, 5, 0, 458779, 5, 0, 524315, 5, 0, 589851, 5, 0, 655387, 5, 0, 720923, 5, 0, 327708, 5, 0, 393244, 5, 0, 458780, 5, 0, 524316, 5, 0, 589852, 5, 0, 655388, 5, 0, 720924, 5, 0, 327709, 5, 0, 393245, 5, 0, 458781, 5, 0, 524317, 5, 0, 589853, 5, 0, 655389, 5, 0, 720925, 5, 0, 327710, 5, 0, 393246, 5, 0, 458782, 5, 0, 524318, 5, 0, 589854, 5, 0, 655390, 5, 0, 720926, 5, 0, 327711, 5, 0, 393247, 5, 0, 458783, 5, 0, 524319, 5, 0, 589855, 5, 0, 655391, 5, 0, 720927, 5, 0, 327725, 5, 0, 393261, 5, 0, 458797, 5, 0, 524333, 5, 0, 589869, 5, 0, 655405, 5, 0, 720941, 5, 0, 327726, 5, 0, 393262, 5, 0, 458798, 5, 0, 524334, 5, 0, 589870, 5, 0, 655406, 5, 0, 720942, 5, 0, 327727, 5, 0, 393263, 5, 0, 458799, 5, 0, 524335, 5, 0, 589871, 5, 0, 655407, 5, 0, 720943, 5, 0, 41, 458757, 0, 65577, 458757, 1, 131113, 458757, 1, 196649, 458757, 1, 262185, 458757, 1, 40, 393221, 0, 65576, 393221, 1, 131112, 393221, 1, 196648, 393221, 1, 262184, 393221, 1, 327731, 5, 0, 327732, 5, 0, 327733, 5, 0, 327734, 5, 0, 327735, 5, 0, 327736, 5, 0, 327737, 5, 0, 327738, 5, 0, 327739, 5, 0, 327740, 5, 0, 327741, 5, 0, 327742, 5, 0, 327743, 5, 0, 327744, 5, 0, 327745, 5, 0, 327748, 5, 0, 393285, 5, 0, 458821, 5, 0, 458822, 5, 0, 524358, 5, 0, 589894, 5, 0, 720966, 5, 0, 655430, 5, 0, 655429, 5, 0, 589893, 5, 0, 524357, 5, 0, 458820, 5, 0, 393284, 5, 0, 524356, 5, 0, 589892, 5, 0, 655428, 5, 0, 720965, 5, 0, 720964, 5, 0, 393286, 5, 0, 327749, 5, 0, 327750, 5, 0)

[node name="Player" parent="." node_paths=PackedStringArray("camera_sync") instance=ExtResource("6_v1xxf")]
position = Vector2(-146.137, 49.5367)
collision_mask = 22
camera_sync = NodePath("../Camera2D")

[node name="Enemies" type="Node" parent="."]

[node name="Goomba2" parent="Enemies" instance=ExtResource("8_vccg2")]
position = Vector2(30, 58)

[node name="Goomba3" parent="Enemies" instance=ExtResource("8_vccg2")]
position = Vector2(52, 59)

[node name="Goomba5" parent="Enemies" instance=ExtResource("8_vccg2")]
position = Vector2(557, 62)

[node name="Goomba6" parent="Enemies" instance=ExtResource("8_vccg2")]
position = Vector2(579, 63)

[node name="Goomba4" parent="Enemies" instance=ExtResource("8_vccg2")]
position = Vector2(193.74, 59.7158)

[node name="Blocks" type="Node" parent="."]

[node name="Brick5" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(476, 24)

[node name="Brick25" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(460, 24)

[node name="Brick6" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(444, 24)

[node name="Brick7" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(428, 24)

[node name="Brick8" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(412, 24)

[node name="Brick2" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(-134, 24)

[node name="Brick3" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(-166, 24)

[node name="Brick11" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(526, -40)

[node name="Brick12" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(510, -40)

[node name="Brick26" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(574, -8)

[node name="Brick27" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(558, -8)

[node name="MysteryBox2" parent="Blocks" instance=ExtResource("12_rg4ui")]
position = Vector2(-150, 24)

[node name="Brick4" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(24, 24)

[node name="Brick23" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(-24, 24)

[node name="Brick24" parent="Blocks" instance=ExtResource("11_bvlwm")]
position = Vector2(-8, 24)

[node name="MysteryBox5" parent="Blocks" instance=ExtResource("12_rg4ui")]
position = Vector2(8, 24)

[node name="MysteryBox6" parent="Blocks" instance=ExtResource("12_rg4ui")]
position = Vector2(590, -8)

[node name="LevelManager" type="Node" parent="." groups=["level_manager"]]
script = ExtResource("13_635rp")

[node name="MovingFireball" parent="." instance=ExtResource("15_gu5sv")]
position = Vector2(683.789, 93.5731)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MovingFireball")
libraries = {
"": SubResource("AnimationLibrary_qdyqf")
}
autoplay = "up and down"

[node name="MovingFireball2" parent="." instance=ExtResource("15_gu5sv")]
position = Vector2(768.016, 93.0433)

[node name="LevelSwitchArea" type="Area2D" parent="."]
position = Vector2(1309.41, 53.5179)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelSwitchArea"]
position = Vector2(0.993286, 7.3195)
shape = SubResource("RectangleShape2D_vmbjc")

[node name="AnimationStartEntranceArea" type="Area2D" parent="."]
position = Vector2(880.373, 38.1792)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimationStartEntranceArea"]
position = Vector2(0.172363, -7.24114)
shape = SubResource("RectangleShape2D_i43xt")

[node name="StopWalkingPoint" type="Marker2D" parent="."]
position = Vector2(1013.78, 55.0271)

[node name="HUD" parent="." instance=ExtResource("23_br0x3")]

[node name="Sounds" parent="." instance=ExtResource("18_kco4t")]

[connection signal="body_entered" from="LevelSwitchArea" to="." method="_on_level_switch_area_body_entered"]
[connection signal="body_entered" from="AnimationStartEntranceArea" to="." method="_on_animation_start_entrance_area_body_entered"]
